[gd_scene load_steps=6 format=3 uid="uid://c7p4ikxhyj0ry"]

[ext_resource type="Script" path="res://scenes/levels/bossfight/boss_phase_2_mask.gd" id="1_1cfve"]
[ext_resource type="Shader" path="res://shaders/spiral.gdshader" id="2_pqx20"]
[ext_resource type="Shader" path="res://shaders/laser.gdshader" id="3_mjp33"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_05eec"]
shader = ExtResource("2_pqx20")
shader_parameter/speed = 8.176

[sub_resource type="ShaderMaterial" id="ShaderMaterial_frfwc"]
resource_local_to_scene = true
shader = ExtResource("3_mjp33")
shader_parameter/beams = 7
shader_parameter/energy = 4.3
shader_parameter/roughness = 10
shader_parameter/frequency = -10
shader_parameter/speed = 1.0
shader_parameter/thickness = 0.024
shader_parameter/outline_thickness = 0.026
shader_parameter/beam_difference = 0.094
shader_parameter/glow = 0.04
shader_parameter/outline_glow = 0.0
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/outline_color = Color(0, 0, 0, 1)
shader_parameter/progress = 1.0
shader_parameter/y_offset = 0.0
shader_parameter/fixed_edge_size = 0.05
shader_parameter/noise_scale = Vector2(1, 1)

[node name="BossPhase2Mask" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1cfve")

[node name="BaseMask" type="ColorRect" parent="."]
layout_mode = 1
offset_right = 1280.0
offset_bottom = 720.0

[node name="SpiralMask" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_05eec")
layout_mode = 0
offset_left = 640.0
offset_top = 256.0
offset_right = 660.0
offset_bottom = 276.0
pivot_offset = Vector2(10, 10)

[node name="LaserMask" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_frfwc")
layout_mode = 0
offset_top = -104.0
offset_right = 1280.0
offset_bottom = 616.0
